syntax = "proto3";

package api.skeleton.service.v1;

//import "google/protobuf/descriptor.proto";
import "google/api/annotations.proto";
import "api/common/extentions.proto";
//import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "gl.king.im/king-lib/protobuf/api/skeleton/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.v1";

//后端授权服务
service SkeletonService{
  rpc Get (GetRequest) returns (GetReply){
    option (common.boss_opts) = {
      method_open: ["inner"],
      auth_ignore: true,
    };
    option (google.api.http) = {
      post: "/Skeleton/v1/Get",
      body: "*",
    };
  }
}

message GetRequest{
}

message GetReply{
  string res = 1;
}
